expense-dev/02-sg/main.tf
module "mysql-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for mysql"
  app          = "mysql-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value

}
module "backend-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for backend"
  app          = "backend-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value

}
module "frontend-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for frontend"
  app          = "frontend-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value

}

module "back-alb-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for backend alb"
  app          = "back-alb-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value



}

module "bastion-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for bastion"
  app          = "bastion-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value

}

module "openvpn-sg" {
  source       = "github.com/GArunkumar999/terraform.git/sg-module?ref=main"
  project_name = "expense"
  environment  = "dev"
  description  = "security group for openvpn"
  app          = "openvpn-sg"
  vpc_id       = data.aws_ssm_parameter.vpc_id.value

}



resource "aws_security_group_rule" "app_alb_bastion" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = module.bastion-sg.sg_id
  security_group_id        = module.back-alb-sg.sg_id
}

# JDOPS-32, Bastion host should be accessed from office n/w
resource "aws_security_group_rule" "bastion_public" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.bastion-sg.sg_id
}


resource "aws_security_group_rule" "vpn_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.openvpn-sg.sg_id
}
resource "aws_security_group_rule" "vpn_443" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.openvpn-sg.sg_id
}

resource "aws_security_group_rule" "vpn_1194" {
  type              = "ingress"
  from_port         = 1194
  to_port           = 1194
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.openvpn-sg.sg_id
}

resource "aws_security_group_rule" "vpn_943" {
  type              = "ingress"
  from_port         = 943
  to_port           = 943
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.openvpn-sg.sg_id
}
resource "aws_security_group_rule" "app_alb_openvpn" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = module.openvpn-sg.sg_id
  security_group_id        = module.back-alb-sg.sg_id
}

resource "aws_security_group_rule" "app_mysql_bastion" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  source_security_group_id = module.bastion-sg.sg_id
  security_group_id        = module.mysql-sg.sg_id
}

resource "aws_security_group_rule" "app_mysql_vpn" {
  type                     = "ingress"
  from_port                = 3306
  to_port                  = 3306
  protocol                 = "tcp"
  source_security_group_id = module.openvpn-sg.sg_id
  security_group_id        = module.mysql-sg.sg_id
}

resource "aws_security_group_rule" "backend_vpn" {
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  source_security_group_id = module.openvpn-sg.sg_id
  security_group_id        = module.backend-sg.sg_id
}
